# stiflyt-db

./: .gitignore  CRON_UPDATES.md  DATABASE_MANAGER_FEATURES.md  INSPECT_DB_USAGE.md  INSTALLATION.md  MIGRATIONS.md  Makefile  QUICK_START.md  README.md  SCRIPTS_OVERVIEW.md  datasets.yaml  datasets_turrutebasen_only.yaml  pyproject.toml
docs/: ANCHOR_NODES.md  ANCHOR_NODES_QUICKSTART.md
migrations/: 000_setup_roles.sql  001_5_remove_fotruteinfo_duplicates.sql  001_add_fotrute_indexes.sql  002_build_topology.sql  003_add_link_ruteinfo_view.sql  004_add_link_endpoint_names.sql  005_create_stable_views.sql  006_add_static_indexes.sql  006_create_osm_views.sql  007_create_route_views.sql  008_fix_grant_schema_privileges_for_prefix.sql  009_add_endpoint_names_geometry.sql  010_add_route_boundary_anchors.sql  011_signs_app_extensions.sql  012_distance_correction.sql  013_sign_panel_first_link.sql  014_sign_sites_route_list.sql  015_route_errata.sql  016_route_errata_deletion.sql  017_field_photos.sql  017_unmarked_segments.sql  018_node_snap_tolerance.sql  019_route_annotations.sql  020_route_link_exclusion.sql  021_route_link_bridge.sql  README.md
scripts/: __init__.py  analyze_loops.py  build_links.py  changeset_initial_schema.sql  db_status.py  download_kartverket.py  inspect_db.py  investigate_link_6279.py  load_dataset.py  operational_schema.sql  populate_endpoint_geometries.py  refresh_diff_report.py  refresh_swap.py  run_changeset_migration.py  run_migrations.py  run_operational_migration.py  sync_endpoint_names_anchors.py  test_route_boundary_anchors.py  (+5 more)
(+9 files in other folders)
